Fix a crash with fancy generator ranges, and add a unit test for that

BUG:298889