duchain/tests/pyduchaintest.cpp
@@ -145,6 +145,9 @@ void PyDUChainTest::testCrashes_data() {
     QTest::addColumn<QString>("code");
     
     QTest::newRow("unicode escape char") << "print u\"\\xe9\"";
+    QTest::newRow("fancy generator context range") << "c1_list = sorted(letter for (letter, meanings) \\\n"
+               "in ambiguous_nucleotide_values.iteritems() \\\n"
+               "if set([codon[0] for codon in codons]).issuperset(set(meanings)))";
 }
 
 void PyDUChainTest::testClassVariables()
